snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-sources.jar.sha1
7ffb59d783045b033873e8da13ba6e61bea862eb